test-data/elab/fun-app/too-many-args.snapshot
exit status: 0

stdout = """
#error : #error
"""

stderr = """
error: Expected function, found `Int`
  ┌─ test-data/elab/fun-app/too-many-args.pion:1:8
  │
1 │ #check (fun x => x) 1 2 3;
  │        ^^^^^^^^^^^^^^
"""
